--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="v1.png">
+	
+	<!-- ============================================== 
+	                   Email send JS                   -->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+	<script type="text/javascript">
+	(function() {
+	emailjs.init("user_AUrqXe7S3TLz3ePwREAPC");
+	})();
+	</script>
 
 </head>
 
@@ -76,6 +85,7 @@
 	   			<h1>I'm Vinojan Abhimanyu</h1>
 
 	   			<p class="intro-position">
+					<span>Entrepreneur</span> 
 	   				<span>Full-stack Developer</span>
 	   				<span>UI/UX Designer</span> 
 	   			</p>
@@ -112,7 +122,7 @@
 
 				   <img src="images/rsz_vino_dp_round.png" alt="Profile Picture">
 
-				   <p class="lead">I am Veerapathirathasan Vinojan. somebody call me 'VinojanAbhimanyu'. I belongs to Mullaitivu and I currently pursuing <b>Bachelor of Science (Hons.) in Software Engineering</b> from the University of Kelaniya. I did my schooling from Udaiyarkaddu maha vidyalayam.
+				   <p class="lead">I am Vinojan Veerapathirathasan. somebody call me 'VinojanAbhimanyu'. I belongs to Mullaitivu and I currently pursuing <b>Bachelor of Science (Hons.) in Software Engineering</b> from the University of Kelaniya. I did my schooling from Udaiyarkaddu maha vidyalayam.
 				    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I possess an optimistic personality who can get along with anyone and work independently. I am highly passionate about Software
 Engineering, Full-stack Development, and AI. Looking to explore suitable career opportunities!
 				</p>
@@ -131,25 +141,30 @@ Engineering, Full-stack Development, and AI. Looking to explore suitable career 
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Veerapathirathasan Vinojan</span>
+   					<span>Vinojan Veerapathirathasan</span>
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
    					<span>June 02, 1999</span>
    				</li>
    				<li>
-   					<strong>Job:</strong>
-					   <span>Freelancer, Full-Stack Developer</span>
-					   <span><b>Founder & CEO</b> of Green Fresh (pvt) Ltd. <br>[It's startup project]</span>
+					   <strong>Job:</strong>
+					   <span>Farmer</span>
+					   <span>Freelancer</span>
+					   <span><b>Founder & CEO</b> of Green Fresh (pvt) Ltd.</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
-					   <span>www.greenfresh.net</span>
+					   <span>www.greenfresh.org</span>
 					   <span>www.vinojanofficial.herokuapp.com</span>
-   				</li>
+				</li>
+				<li>
+					<strong>Mobile:</strong>
+					<span>(+94) 71 524 7977</span>
+				</li>
    				<li>
    					<strong>Email:</strong>
-					   <span>info@greenfresh.net</span>
+					   <span>info@greenfresh.org</span>
 					   <span>vinojan02abhimanyu@gmail.com</span>
    				</li>
 
@@ -168,8 +183,12 @@ Engineering, Full-stack Development, and AI. Looking to explore suitable career 
 			</p>
 
 				<ul class="skill-bars">
+					<li>
+						<div class="progress percent90"><span>90%</span></div>
+						<strong>Adobe PhotoShop CS6</strong>
+					</li>
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
+				   	<div class="progress percent95"><span>95%</span></div>
 				   	<strong>HTML 5</strong>
 				   </li>
 				   <li>
@@ -191,6 +210,10 @@ Engineering, Full-stack Development, and AI. Looking to explore suitable career 
 				   <li>
 					<div class="progress percent85"><span>85%</span></div>
 					<strong>Wordpress</strong>
+				   </li>
+				   <li>
+					<div class="progress percent75"><span>78%</span></div>
+					<strong>UI Design</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
@@ -1007,7 +1030,7 @@ Engineering, Full-stack Development, and AI. Looking to explore suitable career 
    			<h5>Call Me At</h5>
 
    			<p>
-			   	Mobile: (+94) 77 716 3782
+			   	Mobile: (+94) 71 524 7977
 			</p>
 
    		</div>
