--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 
    	<ul class="intro-social">        
          <li><a href="https://www.facebook.com/Vinojan.Abhimanyu/"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="https://www.linkedin.com/in/vinojan-abhimanyu"><i class="fa fa-linkedin"></i></a></li>
-         <li><a href="https://twitter.com/Vinojan_Offl"><i class="fa fa-twitter"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/iam-vinojan"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://twitter.com/iam_vinojan"><i class="fa fa-twitter"></i></a></li>
          <li><a href="https://github.com/Vinojan1999"><i class="fa fa-github"></i></a></li>
-         <li><a href="https://www.instagram.com/vinojan_abhimanyu/"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.instagram.com/iam_vinojan"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
